# slskit

./: .gitignore  .isort.cfg  .prospector.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  check.sh  highstate.snap  mypy.ini  pyproject.toml  salinity.yaml  slskit.yaml
.github/workflows/: ci.yml
salinity/: __init__.py  __main__.py  mocks.py  opts.py  pillar.py  render.py  renderer.py  state.py  top.py  utils.py
salinity/pillar/: items.py  pillar_top.py
slskit/: OLD__main__.py  __init__.py  __main__.py  commands.py  opts.py  pillar.py  render.py  state.py  system.py  template.py  types.py
slskit/lib/: cli.py  logging.py
tests/: test_cli.py  test_mocks.py  test_opts.py  test_pillar.py  test_state.py  test_top.py  test_utils.py
tests/misc/: test_version.py
tests/project/mock/_modules/: vault.py
tests/project/pillar/: base.sls  top.sls  users.sls
tests/project/pillar/minions/: kevin.sls  stuart.sls
tests/project/pillar/module/: init.sls
tests/project/salt/: base.sls  child.txt  detached.sls  tests.sls  top.sls
tests/project/salt/errors/: missing_colon.sls  undefined_variable.sls
tests/project/salt/roles/: via_pillar.sls
tests/project/salt/template/: child.txt
tests/project/salt_clashing/: base.sls
tests/snapshots/test_cli/test_command_output_snapshot/poetry_run_slskit_--log-level_INFO_highstate/: stderr.3001.snap  stderr.snap
tests/snapshots/test_cli/test_command_output_snapshot/poetry_run_slskit_--version/: stderr.3001.snap  stdout.snap
tests/snapshots/test_cli/test_command_output_snapshot/poetry_run_slskit_highstate/: stderr.3001.snap  stderr.snap
tests/snapshots/test_cli/test_command_output_snapshot/poetry_run_slskit_pillars/: stdout.snap
tests/snapshots/test_cli/test_command_output_snapshot/poetry_run_slskit_sls_detached/: stderr.snap  stdout.snap
tests/snapshots/test_cli/test_failed_command_output_snapshot/poetry_run_slskit_sls_errors.missing_colon_tester/: stdout.snap
tests/snapshots/test_cli/test_failed_command_output_snapshot/poetry_run_slskit_sls_errors.undefined_variable_tester/: stdout.snap
tests/snapshots/test_cli/test_successful_command_output_snapshot/poetry_run_slskit_--log-level_INFO_highstate/: stdout.snap
tests/snapshots/test_cli/test_successful_command_output_snapshot/poetry_run_slskit_--salt-output_nested_template_testsprojectsalttemplatechild.txt_tester_--context_foo_1234/: stdout.snap
tests/snapshots/test_cli/test_successful_command_output_snapshot/poetry_run_slskit_--version/: stdout.3006.snap  stdout.3007.snap  (+1 more)
tests/snapshots/test_cli/test_template/: template.snap
tools/: check.sh  mypy.sh
(+3 files in other folders)
