[tool.poetry]
name = "slskit"
version = "2023.7.0"
authors = ["Gediminas Zlatkus <gediminas.zlatkus@gmail.com>"]
description = "Tools for checking Salt state validity"
readme = "README.md"
homepage = "https://github.com/gediminasz/slskit"
repository = "https://github.com/gediminasz/slskit"
keywords = ["salt", "saltstack", "sls"]
classifiers = ["Topic :: Software Development :: Quality Assurance"]

[tool.poetry.dependencies]
python =">=3.8, <3.13"
click = "^8.1.7"
colorlog = "^6.8.2"
funcy = "^2.0"
jsonschema = "^4.22.0"
salt = ">=3006.0"

[tool.poetry.group.dev.dependencies]
black = "*"
gitpython = "*"
mypy = "*"
pytest = "*"
pytest-snapshot = "*"
types-pyyaml = "*"

[tool.poetry.scripts]
slskit = 'slskit:run_module'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
